syntax = "proto3";

message Node {
    required string name = 1;
    optional Plasmid plasmid = 2;
    optional PlasmidTrack plasmidTrack = 3;
    optional TrackLabel trackLabel = 4;
    optional TrackScale trackScale = 5;
    optional TrackMarker trackMarker = 6;
    optional MarkerLabel markerLabel = 7;
    repeated Node nodes = 8;
}

message Plasmid {
    string plasmidheight = 1;
    string plasmidwidth = 2;
    string sequencelength = 3;
    string sequence = 4;
    repeated PlasmidTrack tracks = 5;
}

message PlasmidTrack {
    string radius = 1;
    string width = 2;
    repeated TrackMarker markers = 3;
    repeated TrackScale scales = 4;
    repeated TrackLabel labels = 5; 
}

message TrackLabel {
    string text = 1;
    string vadjust = 2;
    string hadjust = 3;
}

message TrackScale {
    string interval = 1;
    string ticksize = 2;
    string direction = 3;
    string vadjust = 4;
    string showlabels = 5;
    string labelvadjust = 6;
    string labelclass = 7;
    string labelstyle = 8;
}

message TrackMarker {
    string start = 1;
    string end = 2;
    string vadjust = 3;
    string wadjust = 4;
    string markergroup = 5;
    string arrowstartlength = 6;
    string arrowstartwidth = 7;
    string arrowstartangle = 8;
    string arrowendlength = 9;
    string arrowendwidth = 10;
    string arrowendangle = 11;
    string markerclick = 12;
    repeated MarkerLabel labels = 13;
}

message MarkerLabel {
    string text = 1;
    string vadjust = 2;
    string hadjust = 3;
    string valign = 4;
    string halign = 5;
    string type = 6;
    string showline = 7;
    string linestyle = 8;
    string lineclass = 9;
    string linevadjust = 10;
    string labelclick = 11;
}
